--- a/Pagina1.html
+++ b/Pagina1.html
@@ -58,7 +58,7 @@
         <ul>
             <li><a href="home.html">Inicio</a></li>
             <li><a href="Pagina1.html">Quem somos</a></li>
-            <li><a href="Pagina2.html">Contato</a></li>
+            <li><a href="pagina2.html">Contato</a></li>
         <ul/>
     </body>
     <br>
