--- a/pagina2.html
+++ b/pagina2.html
@@ -100,6 +100,21 @@
 
             </form>
         </section>
+        <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<font color="color: brown;">E-mail para contato</font>
+<font color="color: brown;">erike.cbp@gmail.com</font>
 <br>
     </div>
 </body>
